--- a/asas_peripherique.html
+++ b/asas_peripherique.html
@@ -14,45 +14,63 @@
 <p class="common_h2">Chez un patient dont l'<span class="bold">âge du diagnostic est < 45 ans</span>, on peut classer sa maladie dans la forme spondylarthrite périphérique si :</p>
 
 <div>
-    <input type="checkbox" id="item1" name="item1" value="item1">
-    <label for="item1">Présence d'une Arthrite, Enthésite, ou Dactylite</label>
+    <label class="containerCb">Présence d'une Arthrite, Enthésite, ou Dactylite
+        <input type="checkbox" id="item1" name="item1" value="item1">
+        <span class="checkmarkCb"></span>
+    </label>
 </div>
 <div class="and">ET</div>
 <div>
-    <input type="radio" id="choice1" name="drone" value="choice1">
-    <label for="choice1">≥ 1 critère A de spondylarthite</label>
+    <label class="containerRadio">≥ 1 critère A de spondylarthite
+        <input type="radio" id="choice1" name="drone" value="choice1">
+        <span class="checkmarkRadio"></span>
+    </label>
 </div>
 <div class="or">OU</div>
 <div>
-    <input type="radio" id="choice2" name="drone" value="choice2">
-    <label for="choice2">≥ 2 critères B de spondylarthite</label>
+    <label class="containerRadio">≥ 2 critères B de spondylarthite
+        <input type="radio" id="choice2" name="drone" value="choice2">
+        <span class="checkmarkRadio"></span>
+    </label>
 </div>
 
 <br>
 <p class="common_h2">Critères A de spondylarthrite :</p>
 <div>
-    <input type="checkbox" id="list_item_1" name="list_item_1" value="list_item_1">
-    <label for="list_item_1">Uvéite</label>
+    <label class="containerCb">Uvéite
+        <input type="checkbox" id="list_item_1" name="list_item_1" value="list_item_1">
+        <span class="checkmarkCb"></span>
+    </label>
 </div>
 <div>
-    <input type="checkbox" id="list_item_2" name="list_item_2" value="list_item_2">
-    <label for="list_item_2">Psoriasis</label>
+    <label class="containerCb">Psoriasis
+        <input type="checkbox" id="list_item_2" name="list_item_2" value="list_item_2">
+        <span class="checkmarkCb"></span>
+    </label>
 </div>
 <div>
-    <input type="checkbox" id="list_item_3" name="list_item_3" value="list_item_3">
-    <label for="list_item_3">Maladie de Crohn / Rectocolite Hémorragique</label>
+    <label class="containerCb">Maladie de Crohn / Rectocolite Hémorragique
+        <input type="checkbox" id="list_item_3" name="list_item_3" value="list_item_3">
+        <span class="checkmarkCb"></span>
+    </label>
 </div>
 <div>
-    <input type="checkbox" id="list_item_4" name="list_item_4" value="list_item_4">
-    <label for="list_item_4">Infection préalable</label>
+    <label class="containerCb">Infection préalable
+        <input type="checkbox" id="list_item_4" name="list_item_4" value="list_item_4">
+        <span class="checkmarkCb"></span>
+    </label>
 </div>
 <div>
-    <input type="checkbox" id="list_item_5" name="list_item_5" value="list_item_5">
-    <label for="list_item_5">HLA-B27 positif</label>
+    <label class="containerCb">HLA-B27 positif
+        <input type="checkbox" id="list_item_5" name="list_item_5" value="list_item_5">
+        <span class="checkmarkCb"></span>
+    </label>
 </div>
 <div>
-    <input type="checkbox" id="list_item_6" name="list_item_6" value="list_item_6">
-    <label for="list_item_6">Sacro-iliite à l'imagerie</label>
+    <label class="containerCb">Sacro-iliite à l'imagerie
+        <input type="checkbox" id="list_item_6" name="list_item_6" value="list_item_6">
+        <span class="checkmarkCb"></span>
+    </label>
 </div>
 <div class="italic small">
     (Inflammation fortement évocatrice de sacro-iliite à l'IRM,
@@ -62,24 +80,34 @@
 <br>
 <p class="common_h2">Critères B de spondylarthrite :</p>
 <div>
-    <input type="checkbox" id="list_item_7" name="list_item_7" value="list_item_7">
-    <label for="list_item_7">Arthrite</label>
+    <label class="containerCb">Arthrite
+        <input type="checkbox" id="list_item_7" name="list_item_7" value="list_item_7">
+        <span class="checkmarkCb"></span>
+    </label>
 </div>
 <div>
-    <input type="checkbox" id="list_item_8" name="list_item_8" value="list_item_8">
-    <label for="list_item_8">Enthésite</label>
+    <label class="containerCb">Enthésite
+        <input type="checkbox" id="list_item_8" name="list_item_8" value="list_item_8">
+        <span class="checkmarkCb"></span>
+    </label>
 </div>
 <div>
-    <input type="checkbox" id="list_item_9" name="list_item_9" value="list_item_9">
-    <label for="list_item_9">Dactylite</label>
+    <label class="containerCb">Dactylite
+        <input type="checkbox" id="list_item_9" name="list_item_9" value="list_item_9">
+        <span class="checkmarkCb"></span>
+    </label>
 </div>
 <div>
-    <input type="checkbox" id="list_item_10" name="list_item_10" value="list_item_10">
-    <label for="list_item_10">Lombalgie inflammatoire (présente ou passée)</label>
+    <label class="containerCb">Lombalgie inflammatoire (présente ou passée)
+        <input type="checkbox" id="list_item_10" name="list_item_10" value="list_item_10">
+        <span class="checkmarkCb"></span>
+    </label>
 </div>
 <div>
-    <input type="checkbox" id="list_item_11" name="list_item_11" value="list_item_11">
-    <label for="list_item_11">Antécédent familial de Spondylarthrite</label>
+    <label class="containerCb">Antécédent familial de Spondylarthrite
+        <input type="checkbox" id="list_item_11" name="list_item_11" value="list_item_11">
+        <span class="checkmarkCb"></span>
+    </label>
 </div>
 
 <br>
