--- a/acr_1997.html
+++ b/acr_1997.html
@@ -16,50 +16,93 @@
 
 <form name="Form" id="Form">
     <table border="0" align="center" cellpadding="2" cellspacing="0">
-
         <tr>
-            <td ><input name="vItem1" id="vItem1" type="checkbox" value="1" onclick="f_Calculer()" /></td>
-            <td ><label for="vItem1">Rash malaire</label></td>
+            <td>
+                <label class="containerCb">Rash malaire
+                    <input name="vItem1" id="vItem1" type="checkbox" value="1" onclick="f_Calculer()" >
+                    <span class="checkmarkCb"></span>
+                </label>
+            </td>
         </tr>
         <tr>
-            <td><input name="vItem2" id="vItem2" type="checkbox" value="1" onclick="f_Calculer()" /></td>
-            <td ><label for="vItem2">Lupus discoïde</label></td>
+            <td>
+                <label class="containerCb">Lupus discoïde
+                    <input name="vItem2" id="vItem2" type="checkbox" value="1" onclick="f_Calculer()" />
+                    <span class="checkmarkCb"></span>
+                </label>
+            </td>
         </tr>
         <tr>
-            <td><input name="vItem3" id="vItem3" type="checkbox" value="1" onclick="f_Calculer()" /></td>
-            <td ><label for="vItem3">Photosensibilité</label></td>
+            <td>
+                <label class="containerCb">Photosensibilité
+                    <input name="vItem3" id="vItem3" type="checkbox" value="1" onclick="f_Calculer()" />
+                    <span class="checkmarkCb"></span>
+                </label>
+            </td>
         </tr>
         <tr>
-            <td><input name="vItem4" id="vItem4" type="checkbox" value="1" onclick="f_Calculer()" /></td>
-            <td ><label for="vItem4">Ulcérations orales ou nasopharyngées</label></td>
+            <td>
+                <label class="containerCb">Ulcérations orales ou nasopharyngées
+                    <input name="vItem4" id="vItem4" type="checkbox" value="1" onclick="f_Calculer()" />
+                    <span class="checkmarkCb"></span>
+                </label>
+            </td>
         </tr>
         <tr>
-            <td><input name="vItem5" id="vItem5" type="checkbox" value="1" onclick="f_Calculer()" /></td>
-            <td><label for="vItem5">Arthrites non érosives touchant au moins 2 articulations périphériques, caractérisées par une douleur, un gonflement ou un épanchement</label></td>
+            <td>
+                <label class="containerCb">Arthrites non érosives touchant au moins 2 articulations périphériques, caractérisées par une douleur, un gonflement ou un épanchement
+                    <input name="vItem5" id="vItem5" type="checkbox" value="1" onclick="f_Calculer()" />
+                    <span class="checkmarkCb"></span>
+                </label>
+            </td>
         </tr>
         <tr>
-            <td><input name="vItem6" id="vItem6" type="checkbox" value="1" onclick="f_Calculer()" /></td>
-            <td><label for="vItem6">Pleurésie ou péricardite</label></td>
+            <td>
+                <label class="containerCb">Pleurésie ou péricardite
+                    <input name="vItem6" id="vItem6" type="checkbox" value="1" onclick="f_Calculer()" />
+                    <span class="checkmarkCb"></span>
+                </label>
+            </td>
         </tr>
         <tr>
-            <td><input name="vItem7" id="vItem7" type="checkbox" value="1" onclick="f_Calculer()" /></td>
-            <td><label for="vItem7">Protéinurie persistante > 0,5 g/j ou cylindrurie</label></td>
+            <td>
+                <label class="containerCb">Protéinurie persistante > 0,5 g/j ou cylindrurie
+                    <input name="vItem7" id="vItem7" type="checkbox" value="1" onclick="f_Calculer()" />
+                    <span class="checkmarkCb"></span>
+                </label>
+            </td>
         </tr>
         <tr>
-            <td><input name="vItem8" id="vItem8" type="checkbox" value="1" onclick="f_Calculer()" /></td>
-            <td><label for="vItem8">Convulsions ou psychose (en l'absence de cause médicamenteuse ou métabolique)</label></td>
+            <td>
+                <label class="containerCb">Convulsions ou psychose (en l'absence de cause médicamenteuse ou métabolique)
+                    <input name="vItem8" id="vItem8" type="checkbox" value="1" onclick="f_Calculer()" />
+                    <span class="checkmarkCb"></span>
+                </label>
+            </td>
         </tr>
         <tr>
-            <td><input name="vItem9" id="vItem9" type="checkbox" value="1" onclick="f_Calculer()" /></td>
-            <td><label for="vItem9">Atteinte hématologique: Anémie hémolytique ou Leucopénie < 4000/µL à 2 reprises ou Lymphopénie < 1500/µL à 2 reprises ou Thrombopénie < 100 000/µL en l'absence de drogues cytopéniantes</label></td>
+            <td>
+                <label class="containerCb">Atteinte hématologique: Anémie hémolytique ou Leucopénie < 4000/µL à 2 reprises ou Lymphopénie < 1500/µL à 2 reprises ou Thrombopénie < 100 000/µL en l'absence de drogues cytopéniantes
+                    <input name="vItem9" id="vItem9" type="checkbox" value="1" onclick="f_Calculer()" />
+                    <span class="checkmarkCb"></span>
+                </label>
+            </td>
         </tr>
         <tr>
-            <td><input name="vItem10" id="vItem10" type="checkbox" value="1" onclick="f_Calculer()" /></td>
-            <td><label for="vItem10">Titre anormal d'anticorps anti-nucléaires par IF (en l'absence de drogues inductrices)</label></td>
+            <td>
+                <label class="containerCb">Titre anormal d'anticorps anti-nucléaires par IF (en l'absence de drogues inductrices)
+                    <input name="vItem10" id="vItem10" type="checkbox" value="1" onclick="f_Calculer()" />
+                    <span class="checkmarkCb"></span>
+                </label>
+            </td>
         </tr>
         <tr>
-            <td><input name="vItem11" id="vItem11" type="checkbox" value="1" onclick="f_Calculer()" /></td>
-            <td><label for="vItem11">Perturbations immunologiques: titre anormal d'anticorps anti-ADN natif, anticorps anti-Sm ou présence d'anticorps antiphospholipides: sérologie syphilitique dissociée constatée à 2 reprises à 6 mois ou anticoagulant circulant de type lupique ou titre anormal d'anticorps anti-cardiolipine en IgG ou IgM</label></td>
+            <td>
+                <label class="containerCb">Perturbations immunologiques: titre anormal d'anticorps anti-ADN natif, anticorps anti-Sm ou présence d'anticorps antiphospholipides: sérologie syphilitique dissociée constatée à 2 reprises à 6 mois ou anticoagulant circulant de type lupique ou titre anormal d'anticorps anti-cardiolipine en IgG ou IgM
+                    <input name="vItem11" id="vItem11" type="checkbox" value="1" onclick="f_Calculer()" />
+                    <span class="checkmarkCb"></span>
+                </label>
+            </td>
         </tr>
     </table>
     <br />
