--- a/EIFEL.html
+++ b/EIFEL.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title>ÉCHELLE D’INCAPACITÉ FONCTIONNELLE pour L’ÉVALUATION DES LOMBALGIES</title>
+    <title>Échelle d’Incapacité Fonctionnelle pour L’Évaluation des Lombalgies</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width" />
     <script type="text/javascript" src="script_amor.js"></script>
@@ -10,7 +10,7 @@
 </head>
 
 <body class="scorebody">
-<p class="scoretitle_title common_h1">ÉCHELLE D’INCAPACITÉ FONCTIONNELLE<br />pour L’ÉVALUATION DES LOMBALGIES<br />(EIFEL)<br />
+<p class="scoretitle_title common_h1">Échelle d’Incapacité Fonctionnelle pour L’Évaluation des Lombalgies (EIFEL)
 
 <h2>Préambule</h2>
 <div>
