--- a/asas_peripherique.html
+++ b/asas_peripherique.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<h1>Spondylarthrite périphérique,<br> Critères ASAS</h1>
+<p class="common_h1">Spondylarthrite périphérique, Critères ASAS</p>
 <p class="common_h2">Chez un patient dont l'<span class="bold">âge du diagnostic est < 45 ans</span>, on peut classer sa maladie dans la forme spondylarthrite périphérique si :</p>
 
 <div>
@@ -19,14 +19,14 @@
         <span class="checkmarkCb"></span>
     </label>
 </div>
-<div class="and">ET</div>
+<div class="and">ET</div><br>
 <div>
     <label class="containerRadio">≥ 1 critère A de spondylarthite
         <input type="radio" id="choice1" name="drone" value="choice1">
         <span class="checkmarkRadio"></span>
     </label>
 </div>
-<div class="or">OU</div>
+<br><div class="or">OU</div><br>
 <div>
     <label class="containerRadio">≥ 2 critères B de spondylarthite
         <input type="radio" id="choice2" name="drone" value="choice2">
