--- a/diagnostic.html
+++ b/diagnostic.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<h1>Critères diagnostiques<br> Américano-Européens de 2002</h1>
+<p class="common_h1">Critères diagnostiques<br> Américano-Européens de 2002</p>
 <p>SYNDROME DE GOUGEROT-SJOGREN: CRITERES DIAGNOSTIQUES<br>
     Critères européens révisés ou internationaux du syndrome de Gougerot-Sjögren<br>
     (Ann Rheum Dis 2002 ;61 :554)</p>
@@ -121,6 +121,9 @@
 <br>
 <br>
 <p class="bold"><i class="fas fa-arrow-right"></i> Syndrome de Gougerot-Sjögren primitif :</p>
+<span class="result1">
+<p id="text1" style="display:none">Affirmatif</p>
+</span>
 <div class="flex-row">
     <div class="flex-column">
         <div>
@@ -129,7 +132,7 @@
                 <span class="checkmarkCb"></span>
             </label>
         </div>
-        <span class="and">ET</span>
+        <span class="and">ET</span><br>
         <div>
             <label class="containerCb">3 au moins des critères III, IV, V, VI
                 <input onclick="return false;" type="checkbox" id="item15" name="item15" value="item15">
@@ -137,12 +140,13 @@
             </label>
         </div>
     </div>
-    <div class="result1">
-        <p id="text1" style="display:none">Affirmatif</p>
-    </div>
+
 </div>
 <br>
-<p class="bold"><i class="fas fa-arrow-right"></i>Syndrome de Gougerot-Sjögren secondaire :</p>
+<p class="bold"><i class="fas fa-arrow-right"></i> Syndrome de Gougerot-Sjögren secondaire :</p>
+<span class="result2">
+        <p id="text2" style="display:none">Affirmatif</p>
+    </span>
 <div class="flex-row">
     <div class="flex-column">
         <div>
@@ -151,23 +155,20 @@
                 <span class="checkmarkCb"></span>
             </label>
         </div>
-        <span class="and">ET</span>
+        <span class="and">ET</span><br>
         <div>
             <label class="containerCb">Présence de l’item I ou II
                 <input onclick="return false;" type="checkbox" id="item17" name="item17" value="item17">
                 <span class="checkmarkCb"></span>
             </label>
         </div>
-        <span class="and">ET</span>
+        <span class="and">ET</span><br>
         <div>
             <label class="containerCb">Présence de deux des items III, IV et V
                 <input onclick="return false;" type="checkbox" id="item18" name="item18" value="item18">
                 <span class="checkmarkCb"></span>
             </label>
         </div>
-    </div>
-    <div class="result2">
-        <p id="text2" style="display:none">Affirmatif</p>
     </div>
 </div>
 <br>
