--- a/ACR_2010.html
+++ b/ACR_2010.html
@@ -39,6 +39,8 @@
                     <span class="checkmarkCb"></span>
                 </label>
             </td>
+        </tr>
+        <tr>
             <td>
                 <label class="containerCb">Shoulder girdle, right
                     <input name="vItem5" id="vItem5" type="checkbox" value="1" onclick="f_Calculer()" />
@@ -46,7 +48,6 @@
                 </label>
             </td>
         </tr>
-
         <tr>
             <td>
                 <label class="containerCb">Hip (buttock, trochanter), left
@@ -54,6 +55,8 @@
                     <span class="checkmarkCb"></span>
                 </label>
             </td>
+        </tr>
+        <tr>
             <td>
                 <label class="containerCb">Hip (buttock, trochanter), right
                     <input name="vItem6" id="vItem6" type="checkbox" value="1" onclick="f_Calculer()" />
@@ -61,7 +64,6 @@
                 </label>
             </td>
         </tr>
-
         <tr>
             <td>
                 <label class="containerCb">Upper back
@@ -69,6 +71,8 @@
                     <span class="checkmarkCb"></span>
                 </label>
             </td>
+        </tr>
+        <tr>
             <td>
                 <label class="containerCb">Lower back
                     <input name="vItem8" id="vItem8" type="checkbox" value="1" onclick="f_Calculer()" />
@@ -76,7 +80,6 @@
                 </label>
             </td>
         </tr>
-
         <tr>
             <td>
                 <label class="containerCb">Jaw, left
@@ -84,6 +87,8 @@
                     <span class="checkmarkCb"></span>
                 </label>
             </td>
+        </tr>
+        <tr>
             <td>
                 <label class="containerCb">Jaw, right
                     <input name="vItem7" id="vItem7" type="checkbox" value="1" onclick="f_Calculer()" />
@@ -91,7 +96,6 @@
                 </label>
             </td>
         </tr>
-
         <tr>
             <td>
                 <label class="containerCb">Upper arm, left
@@ -99,6 +103,8 @@
                     <span class="checkmarkCb"></span>
                 </label>
             </td>
+        </tr>
+        <tr>
             <td>
                 <label class="containerCb">Upper arm, right
                     <input name="vItem13" id="vItem13" type="checkbox" value="1" onclick="f_Calculer()" />
@@ -106,7 +112,6 @@
                 </label>
             </td>
         </tr>
-
         <tr>
             <td>
                 <label class="containerCb">Upper leg, left
@@ -114,6 +119,8 @@
                     <span class="checkmarkCb"></span>
                 </label>
             </td>
+        </tr>
+        <tr>
             <td>
                 <label class="containerCb">Upper leg, right
                     <input name="vItem14" id="vItem14" type="checkbox" value="1" onclick="f_Calculer()" />
@@ -121,7 +128,6 @@
                 </label>
             </td>
         </tr>
-
         <tr>
             <td>
                 <label class="containerCb">Lower arm, left
@@ -129,6 +135,8 @@
                     <span class="checkmarkCb"></span>
                 </label>
             </td>
+        </tr>
+        <tr>
             <td>
                 <label class="containerCb">Lower arm, right
                     <input name="vItem18" id="vItem18" type="checkbox" value="1" onclick="f_Calculer()" />
@@ -136,7 +144,6 @@
                 </label>
             </td>
         </tr>
-
         <tr>
             <td>
                 <label class="containerCb">Lower leg, left
@@ -144,6 +151,8 @@
                     <span class="checkmarkCb"></span>
                 </label>
             </td>
+        </tr>
+        <tr>
             <td>
                 <label class="containerCb">Lower leg, right
                     <input name="vItem19" id="vItem19" type="checkbox" value="1" onclick="f_Calculer()" />
@@ -151,7 +160,6 @@
                 </label>
             </td>
         </tr>
-
         <tr>
             <td>
                 <label class="containerCb">Neck
@@ -159,6 +167,8 @@
                     <span class="checkmarkCb"></span>
                 </label>
             </td>
+        </tr>
+        <tr>
             <td>
                 <label class="containerCb">Chest
                     <input name="vItem11" id="vItem11" type="checkbox" value="1" onclick="f_Calculer()" />
@@ -166,7 +176,6 @@
                 </label>
             </td>
         </tr>
-
         <tr>
             <td>
                 <label class="containerCb">Abdomen
@@ -300,8 +309,9 @@
                 <td>
                     <div class="flex-row">
                         <input class="input_score" name="ResultatHeadaches" type="text" id="ResultatHeadaches" style="" disabled readonly="readonly"/><br/>
-                        <label class="containerCb">Headaches (Score 0-1)
+                        <label class="containerCb mt">Headaches (Score 0-1)
                             <input id="vItemHeadaches" type="checkbox" value="0" onclick="f_CalculerHeadaches(); " />
+                            <span class="checkmarkCb"></span>
                         </label>
                     </div>
                 </td>
@@ -310,8 +320,9 @@
                 <td>
                     <div class="flex-row">
                         <input class="input_score" name="ResultatPain" type="text" id="ResultatPain" style="" disabled readonly="readonly"/><br/>
-                        <label class="containerCb">Pain or cramps in lower abdomen (Score 0-1)
+                        <label class="containerCb mt">Pain or cramps in lower abdomen (Score 0-1)
                             <input id="vItemPain" type="checkbox" value="0" onclick="f_CalculerPain(); " />
+                            <span class="checkmarkCb"></span>
                         </label>
                     </div>
                 </td>
@@ -320,8 +331,9 @@
                 <td>
                     <div class="flex-row">
                         <input class="input_score" name="ResultatDepression" type="text" id="ResultatDepression" style="" disabled readonly="readonly"/><br/>
-                        <label class="containerCb">Depression (Score 0-1)
+                        <label class="containerCb mt">Depression (Score 0-1)
                             <input  id="vItemDepression" type="checkbox" value="0" onclick="f_CalculerDepression(); " />
+                            <span class="checkmarkCb"></span>
                         </label>
                     </div>
                 </td>
