--- a/asas_axiale.html
+++ b/asas_axiale.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<h1>Spondylarthrite axiale,<br> Critères ASAS</h1>
+<p class="common_h1">Spondylarthrite axiale,<br> Critères ASAS</p>
 <p class="common_h2">Chez un patient présentant une <span class="bold">rachialgie ≥ à 3 mois</span> dont l'<span class="bold">âge du diagnostic est &lt; à 45 ans</span>, on peut classer sa maladie dans la forme spondylarthrite axiale si :</p>
 
 
@@ -19,21 +19,21 @@
     <span class="checkmarkCb"></span>
 </label>
 
-<br><span class="and">ET</span><br>
+<br><span class="and">ET</span><br><br>
 
 <label class="containerCb">≥ 1 signe de spondylarthite
     <input onclick="uncheck34()" class="cb" type="checkbox" id="Mitem2" name="item2" value="item2">
     <span class="checkmarkCb"></span>
 </label>
 
-<br><br><span>OU</span><br><br>
+<br><span>OU</span><br><br>
 
 <label class="containerCb">HLA-B27 positif
     <input onclick="uncheck12()" class="cb" type="checkbox" id="Mitem3" name="Mitem3" value="Mitem3">
     <span class="checkmarkCb"></span>
 </label>
 
-<br><span class="and">ET</span><br>
+<br><span class="and">ET</span><br><br>
 
 <label class="containerCb">≥ 2 <span class="bold">autres</span> signes de spondylarthite
     <input onclick="uncheck12()" class="cb" type="checkbox" id="Mitem4" name="item4" value="item4">
@@ -49,7 +49,7 @@
         <span class="checkmarkRadio"></span>
     </label>
 </div>
-<br><div>OU</div><br>
+<div>OU</div><br>
 <div>
     <label class="containerRadio">Sacro-iliite radiologique stade ≥ 2 si bilatéral OU ≥ 3 si unilatéral
         <input type="radio" id="choice2" name="drone" value="choice2">
