--- a/caspar.html
+++ b/caspar.html
@@ -43,7 +43,7 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2" class="subtitle1">2. Présence explicite de psoriasis à l’examen ou dans les antécédents :</td>
+            <td colspan="2" class="subtitle1">2. Présence explicite de psoriasis à l’examen ou dans les antécédents</td>
         </tr>
         <tr>
             <td>
