--- a/EIFEL.html
+++ b/EIFEL.html
@@ -37,7 +37,7 @@
     Ils varient de 0 à 24.
 </div>
 
-<h2>Evalutation - Questions</h2>
+<h2>Evaluation - Questions</h2>
 
 <form name="Form" id="Form">
     <table border="0" align="center" cellpadding="2" cellspacing="0">
