--- a/SLEDAI.html
+++ b/SLEDAI.html
@@ -31,7 +31,7 @@
     Ils varient de 0 à 105.
 </div>
 
-<h2>Evalutation - Valeurs - Manifestations - Définition</h2>
+<h2>Evaluation - Valeurs - Manifestations - Définition</h2>
 
 <form name="Form" id="Form">
     <table border="0" align="center" cellpadding="2" cellspacing="0">
