--- a/acr_1997.html
+++ b/acr_1997.html
@@ -12,7 +12,7 @@
 <body class="scorebody">
 <p class="scoretitle_title common_h1">Critères de classification ACR 1982,<br /> mis à jour en 1997<br />
 
-<h2>Évalutation</h2>
+<h2>Évaluation</h2>
 
 <form name="Form" id="Form">
     <table border="0" align="center" cellpadding="2" cellspacing="0">
