--- a/ACR_2010.html
+++ b/ACR_2010.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="scorebody">
-<p class="scoretitle_title common_h1">2010 ACR Fibromyalgia<br/>Diagnostic Criteria<br/>(Modified 2011)<br/></p>
+<p class="scoretitle_title common_h1">2010 ACR Fibromyalgia Diagnostic Criteria (Modified 2011)</p>
 
 <form name="Form" id="Form">
     <h2></h2>
