--- a/EIFEL.html
+++ b/EIFEL.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="scorebody">
-<p class="scoretitle_title common_h1">Échelle d’Incapacité Fonctionnelle pour L’Évaluation des Lombalgies (EIFEL)
+<p class="scoretitle_title common_h1">Échelle d’Incapacité Fonctionnelle pour L’Évaluation des Lombalgies (EIFEL)</p>
 
 <h2>Préambule</h2>
 <div>
