--- a/SLEDAI.html
+++ b/SLEDAI.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="scorebody">
-<p class="scoretitle_title common_h1">Systemic Lupus<br />Erythematosus Disease Activity Index<br />(SLEDAI)<br />
+<p class="scoretitle_title common_h1">Systemic Lupus Erythematosus Disease Activity Index (SLEDAI)
 
 <h2>Intérêt</h2>
 <div>
