--- a/acr_1997.html
+++ b/acr_1997.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="scorebody">
-<p class="scoretitle_title common_h1">Critères de classification ACR 1982,<br /> mis à jour en 1997<br />
+<p class="scoretitle_title common_h1">Critères de classification ACR 1982, mis à jour en 1997<br />
 
 <h2>Évaluation</h2>
 
