--- a/amor.html
+++ b/amor.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="scorebody">
-<p class="scoretitle_title common_h1" >Spondylarthrite,<br />Critères d'Amor<br />
+<p class="scoretitle_title common_h1" >Spondylarthrite, Critères d'Amor
 <form name="Form" id="Form">
     <table border="0" align="center" cellpadding="2" cellspacing="0">
         <tr>
