--- a/asas_peripherique.html
+++ b/asas_peripherique.html
@@ -19,7 +19,7 @@
         <span class="checkmarkCb"></span>
     </label>
 </div>
-<div class="and">ET</div><br>
+<br><div class="and">ET</div><br>
 <div>
     <label class="containerRadio">≥ 1 critère A de spondylarthite
         <input type="radio" id="choice1" name="drone" value="choice1">
