--- a/caspar.html
+++ b/caspar.html
@@ -18,7 +18,7 @@
 </head>
 
 <body class="scorebody">
-<p class="scoretitle_title common_h1">Rhumatisme Psoriasique<br/>Critères de classification CASPAR</p>
+<p class="scoretitle_title common_h1">Rhumatisme Psoriasique, Critères de classification CASPAR</p>
 
 
 <h2>Méthode</h2>
