--- a/diagnostic.html
+++ b/diagnostic.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<p class="common_h1">Critères diagnostiques<br> Américano-Européens de 2002</p>
+<p class="common_h1">Critères diagnostiques Américano-Européens de 2002</p>
 <p>SYNDROME DE GOUGEROT-SJOGREN: CRITERES DIAGNOSTIQUES<br>
     Critères européens révisés ou internationaux du syndrome de Gougerot-Sjögren<br>
     (Ann Rheum Dis 2002 ;61 :554)</p>
