--- a/QIF.html
+++ b/QIF.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="scorebody">
-<p class="scoretitle_title common_h1">Questionnaire	de	mesure<br/>de	l’impact	de	la	fibromyalgie <br/>(FIQ	révisé)<br />
+<p class="scoretitle_title common_h1">Questionnaire	de	mesure de	l’impact	de	la	fibromyalgie (FIQ	révisé)
 <h2>1 - Etes-vous	capable de</h2>
 <form name="Form" id="Form" class="form_qif">
     <table>
