--- a/asas_axiale.html
+++ b/asas_axiale.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<p class="common_h1">Spondylarthrite axiale,<br> Critères ASAS</p>
+<p class="common_h1">Spondylarthrite axiale, Critères ASAS</p>
 <p class="common_h2">Chez un patient présentant une <span class="bold">rachialgie ≥ à 3 mois</span> dont l'<span class="bold">âge du diagnostic est &lt; à 45 ans</span>, on peut classer sa maladie dans la forme spondylarthrite axiale si :</p>
 
 
